added curl php extension

--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -153,6 +153,7 @@ php:
             - cli
             - intl
             - mcrypt
+            - curl
         pear: {  }
         pecl: {  }
     ini:
