--- a/puphpet/files/templates/vhosts/high-quality-bundles.dev.conf.template
+++ b/puphpet/files/templates/vhosts/high-quality-bundles.dev.conf.template
@@ -3,9 +3,10 @@ server {
     root /var/www/high-quality-bundles/web;
 
     location / {
-        # try to serve file directly, fallback to app.php
+        # try to serve file directly, fallback to app_dev.php
         try_files $uri /app_dev.php$is_args$args;
     }
+
     # DEV
     # This rule should only be placed on your development environment
     # In production, don't include this and don't deploy app_dev.php or config.php
@@ -16,6 +17,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param HTTPS off;
     }
+
     # PROD
     location ~ ^/app\.php(/|$) {
         fastcgi_pass 127.0.0.1:9000;
@@ -23,10 +25,6 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param HTTPS off;
-        # Prevents URIs that include the front controller. This will 404:
-        # http://domain.tld/app.php/some-path
-        # Remove the internal directive to allow URIs like this
-        internal;
     }
 
     error_log /var/log/nginx/high-quality-bundles_error.log;
